--- a/css/styles.css
+++ b/css/styles.css
@@ -106,8 +106,8 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  
+  background-color: #252831;
   align-items: center;
 }
 .filter-options h2 {
@@ -130,22 +130,28 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
+#wrapper-rest{
+  text-align: center;
+}
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
   padding: 30px 15px 60px;
+  display: inline-table;
   text-align: center;
+  margin: 0;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+  /*border: 2px solid #ccc;*/
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  padding: 0 0 25px;
+  width: 40%;
+  border-radius: 20px;
+  box-shadow: 10px 10px 5px #aaa;
+  display: inline-block;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -154,6 +160,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  border-radius: 20px 20px 0 0;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -181,6 +188,11 @@ nav h1 a {
   text-decoration: none;
   text-transform: uppercase;
 }
+@media screen and (max-width: 1025px){
+  #restaurants-list li {
+    width: 85%;
+  }
+}
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
@@ -191,7 +203,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 50%;
   position: fixed;
   right: 0;
   top: 80px;
